2004-03-28  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/bj8pa06n.upp.xml, driver/lxm3200.xml,
	  driver/s400a1.upp.xml, driver/st640ih.upp.xml, driver/stp.xml,
	  printer/Canon-BJC-2100.xml, printer/Canon-BJC-50.xml,
	  printer/Canon-BJC-55.xml, printer/Canon-BJC-80.xml,
	  printer/Canon-BJC-8200.xml, printer/Canon-BJC-85.xml,
	  printer/Canon-CP-100.xml, printer/Canon-LBP-1000.xml,
	  printer/Canon-S500.xml, printer/Canon-S600.xml,
	  printer/Canon-S630.xml, printer/Epson-CL_700.xml,
	  printer/Epson-CL_750.xml, printer/Epson-CL_760.xml,
	  printer/Epson-EM_930C.xml, printer/Epson-EM_930CN.xml,
	  printer/Epson-MJ_520C.xml, printer/Epson-PM_4000PX.xml,
	  printer/Epson-PM_700C.xml, printer/Epson-PM_740C.xml,
	  printer/Epson-PM_750C.xml, printer/Epson-PM_850PT.xml,
	  printer/Epson-PM_950C.xml, printer/Epson-PM_970C.xml,
	  printer/Epson-PX_7000.xml, printer/Epson-PX_9000.xml,
	  printer/Epson-PX_V500.xml, printer/Epson-Stylus_C20SX.xml,
	  printer/Epson-Stylus_C20UX.xml, printer/Epson-Stylus_C40SX.xml,
	  printer/Epson-Stylus_C40UX.xml, printer/Epson-Stylus_C41SX.xml,
	  printer/Epson-Stylus_C41UX.xml, printer/Epson-Stylus_C42SX.xml,
	  printer/Epson-Stylus_C42UX.xml, printer/Epson-Stylus_C50.xml,
	  printer/Epson-Stylus_C60.xml, printer/Epson-Stylus_C61.xml,
	  printer/Epson-Stylus_C62.xml, printer/Epson-Stylus_C63.xml,
	  printer/Epson-Stylus_C64.xml, printer/Epson-Stylus_C70.xml,
	  printer/Epson-Stylus_C80.xml, printer/Epson-Stylus_C82.xml,
	  printer/Epson-Stylus_C83.xml, printer/Epson-Stylus_C84.xml,
	  printer/Epson-Stylus_CX3200.xml,
	  printer/Epson-Stylus_CX5200.xml,
	  printer/Epson-Stylus_CX6400.xml,
	  printer/Epson-Stylus_Color_300.xml,
	  printer/Epson-Stylus_Color_480.xml,
	  printer/Epson-Stylus_Color_500.xml,
	  printer/Epson-Stylus_Color_580.xml,
	  printer/Epson-Stylus_Color_880.xml,
	  printer/Epson-Stylus_Color_8_3.xml,
	  printer/Epson-Stylus_Color_980.xml,
	  printer/Epson-Stylus_Photo_2100.xml,