@@ -1,0 +1,45 @@
+<printer id="printer/Epson-Stylus_Photo_R200">
+  <make>Epson</make>
+  <model>Stylus Photo R200</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>5760</x>
+        <y>1440</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>6 separately exchangeable ink cartridges</en>
+      </comments>
+      <!--one or more "partno" elements.-->
+    </consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <escp/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>D</functionality>
+  <driver>gimp-print</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    For this printer basic support is available in Gimp-Print 5.0.x,
+    fine tuning and testing still has to be done.&lt;p&gt;
+
+    Most probably the same printing engine/firmware as the Epson
+    Stylus Photto R300.&lt;p&gt;
+
+    6-color CMYKcm printing.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
