@@ -26,14 +26,15 @@
   </lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
-  <functionality>F</functionality>
+  <functionality>D</functionality>
   <driver>gimp-print</driver>
   <!--no "contrib_url"-->
   <comments>
     <en>
 
-    This printer is not yet supported by Gimp-Print, but support for
-    it is under development.&lt;p&gt;
+    For this printer basic support is available in Gimp-Print 5.0.x,
+    fine tuning, testing, and support for printing on CDs still has to
+    be done.&lt;p&gt;
 
     This printer has slots for all common types of photo memory
     cards. so one can print photos without PC. The front panel has a
@@ -46,11 +47,8 @@
     CD-ROM drives for photo printing.&lt;p&gt;
 
     6-color CMYKcm printing, printing on inkjet-printable CDs and DVDs
-    possible.&lt;p&gt;
+    possible (not yet supported by Gimp-Print).&lt;p&gt;
 
     </en>
   </comments>
 </printer>
-
-
-
