@@ -1,0 +1,50 @@
+<printer id="printer/Epson-Stylus_Photo_R800">
+  <make>Epson</make>
+  <model>Stylus Photo R800</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>5760</x>
+        <y>1440</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>8 separately exchangeable ink cartridges</en>
+      </comments>
+      <!--one or more "partno" elements.-->
+    </consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <escp/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>F</functionality>
+  <driver>gimp-print</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    This printer is not yet supported by Gimp-Print, but support for
+    it is under development, but it will most probably take a longer
+    time until this device is really supported.&lt;p&gt;
+
+    This printer has is an 8-color (CMYK + red + blue + "gloss
+    enhancer", with two different black inks installed) printer with
+    1.5 pl drop size. There is nominal support in the Gimp-Print
+    driver 5.0.x that may or may not work in CMYK mode, but the
+    Gimp-Print developers are not very confident in it. It should be
+    an extremely fast printer with a huge gamut (particularly since it
+    uses UltraChrome inks, which are pigment but which have a very
+    large gamut even in CMYK form).&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
