@@ -48,7 +48,7 @@
     with a PDA.&lt;p&gt;
 
     6-color CMYKcm printing, printing on inkjet-printable CDs and DVDs
-    possible.&lt;p&gt;
+    possible (not yet supported by Gimp-Print).&lt;p&gt;
 
     Scanning should work as described for the Epson Stylus CX3200 and
     CX5200, best with kernel 2.4.21 or later. To make the "epson"
