@@ -1,0 +1,47 @@
+<printer id="printer/Epson-Stylus_Photo_RX600">
+  <make>Epson</make>
+  <model>Stylus Photo RX600</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>5760</x>
+        <y>1440</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>6 separately exchangeable ink cartridges</en>
+      </comments>
+      <!--one or more "partno" elements.-->
+    </consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <escp/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>D</functionality>
+  <driver>gimp-print</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    Multi-function device: Printer, Scanner, Copier, similar to the
+    Epson Stylus RX500. See that entry for more info.&lt;p&gt;
+
+    The printing engine of this device is most probably the same as of
+    the Epson Stylus Photo R300, which is not yet supported by
+    Gimp-Print, but support for it is under development.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
+
+
+
