@@ -1,5 +1,12 @@
 2004-03-28  Till Kamppeter <till.kamppeter@gmx.net>
 
+	* printer/Epson-Stylus_Photo_R800.xml,
+	  printer/Epson-Stylus_Photo_R300.xml,
+	  printer/Epson-Stylus_Photo_R200.xml,
+	  printer/Epson-Stylus_Photo_RX500.xml,
+	  printer/Epson-Stylus_Photo_RX600.xml: Updated Epson Stylus Photo
+	  R-series printers.
+	
 	* driver/bj8pa06n.upp.xml, driver/lxm3200.xml,
 	  driver/s400a1.upp.xml, driver/st640ih.upp.xml, driver/stp.xml,
 	  printer/Canon-BJC-2100.xml, printer/Canon-BJC-50.xml,
